--- a/trunk/App/res/layout/scan_results.xml
+++ b/trunk/App/res/layout/scan_results.xml
@@ -1,104 +1,114 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     style="@style/FillParentVertical"
     android:background="@drawable/rating">
+	
+	<!-- START Beer name and information -->
+	  <LinearLayout 
+	    style="@style/FillParentVertical"
+	    android:layout_weight="9">
+	    <TextView
+	        android:id="@+id/beerName"
+	        style="@style/WhiteRowCenterText"
+	        android:textSize="22sp"
+	        android:layout_marginTop="15sp"
+	        android:layout_weight="3"/>
 
-<!-- START Beer name and information -->
-  <LinearLayout 
-    style="@style/FillParentVertical"
-    android:layout_weight="9">
-    <TextView
-        android:id="@+id/beerName"
-        style="@style/WhiteRowCenterText"
-        android:textSize="22sp"
-        android:layout_marginTop="15sp"
-        android:layout_weight="2"/>
-              
-     <TextView 
-        android:id="@+id/beerStyle"
-        style="@style/WhiteRowCenterText"
-        android:textSize="12sp"
-        android:layout_weight="4"/>
-     
-     <TextView
-        android:id="@+id/beerABV"
-        style="@style/WhiteRowCenterText"
-        android:textColor="#ffffff"
-        android:textSize="12sp"
-        android:layout_weight="4"/>
-  </LinearLayout>
-<!-- END Beer name and information -->
-  
-<!-- START Layout Spacer-->
-  <LinearLayout 
-    android:id="@+id/layoutSpacer"
-    style="@style/FillParentVertical"
-    android:layout_weight="10">
-  </LinearLayout>
-<!-- END Layout Spacer-->
+        <LinearLayout
+            style="@style/FillParentHorizontal"
+            android:layout_weight="4">
+            
+            <TextView 
+	            android:id="@+id/beerStyle"
+	            style="@style/WhiteRowCenterText"
+	            android:textSize="16sp"
+	            android:layout_weight="1"/>
+            <TextView
+	            android:id="@+id/beerABV"
+	            style="@style/WhiteRowCenterText"
+	            android:textSize="16sp"
+	            android:layout_weight="1"/>
+        </LinearLayout>
 
-<!-- START Ratings Section-->
-  <LinearLayout 
-    style="@style/FillParentVertical"
-    android:layout_weight="9">
-    <LinearLayout
-        style="@style/FillParentHorizontal"
-        android:layout_weight="2">
-        <TextView
-            android:id="@+id/communityRating"
-            style="@style/BlackRowCenterLargeText"
-            android:layout_weight="1"/>
-                
-        <TextView 
-            android:id="@+id/brothersRating"
-            style="@style/BlackRowCenterLargeText"
-            android:layout_weight="1"/>
-    </LinearLayout>
-    
-    <LinearLayout
-        style="@style/FillParentHorizontal"
-        android:layout_weight="3">
-        <TextView
-            android:id="@+id/communityRatingName"
-            style="@style/BlackRowCenterMediumText"
-            android:layout_weight="1"/>
-        
-        <TextView
-            android:id="@+id/brothersRatingName"
-            style="@style/BlackRowCenterMediumText"
-            android:layout_weight="1"/>
-    </LinearLayout>
-    
-    <LinearLayout
-        style="@style/FillParentHorizontal"
-        android:layout_weight="3">
-        <TextView
-            android:id="@+id/communityRatingCount"
+	  </LinearLayout>
+	<!-- END Beer name and information -->
+	  
+	<!-- START Layout Spacer-->
+	  <LinearLayout 
+	    android:id="@+id/layoutSpacer"
+	    style="@style/FillParentVertical"
+	    android:layout_weight="12">
+	  </LinearLayout>
+	<!-- END Layout Spacer-->
+	
+	<!-- START Ratings Section-->
+	  <LinearLayout 
+	    style="@style/FillParentVertical"
+	    android:layout_weight="9">
+	    <LinearLayout
+	        style="@style/FillParentHorizontal"
+	        android:layout_weight="3">
+	        <TextView
+	            android:id="@+id/communityRating"
+	            style="@style/BlackRowCenterLargeText"
+	            android:layout_weight="1"/>
+	                
+	        <TextView 
+	            android:id="@+id/brothersRating"
+	            style="@style/BlackRowCenterLargeText"
+	            android:layout_weight="1"/>
+	    </LinearLayout>
+	    
+	    <LinearLayout
+	        style="@style/FillParentHorizontal"
+	        android:layout_weight="3">
+	        <TextView
+	            android:id="@+id/communityRatingName"
+	            style="@style/BlackRowCenterMediumText"
+	            android:layout_weight="1"/>
+	        
+	        <TextView
+	            android:id="@+id/brothersRatingName"
+	            style="@style/BlackRowCenterMediumText"
+	            android:layout_weight="1"/>
+	    </LinearLayout>
+	    
+	    <LinearLayout
+	        style="@style/FillParentHorizontal"
+	        android:layout_weight="4">
+	        <TextView
+	            android:id="@+id/communityRatingCount"
+	            style="@style/BlackRowCenterSmallText"
+	            android:layout_weight="1"/>
+	       <TextView
+	            style="@style/BlackRowCenterSmallText"
+	            android:layout_weight="1"/>
+	    </LinearLayout>
+	  </LinearLayout>
+	<!-- END Ratings Section-->  
+	
+	<!-- START Button Link-->
+	  <LinearLayout 
+	    android:id="@+id/layoutSpacer"
+	    style="@style/FillParentVertical"
+	    android:layout_weight="10">
+	    <Button
+	        android:text="@string/viewProfilePage"
+	        android:id="@+id/viewBeerPage"
+	        style="@style/BlackRowCenterSmallText"
+	        android:layout_weight="1"/>
+	      <Button
+	        android:text="@string/viewStylePage"
+	        android:id="@+id/findOtherSimilarStyles"
+	        style="@style/BlackRowCenterSmallText"
+	        android:layout_weight="1"/>
+	     <Button
+            android:text="@string/incorrectBeer"
+            android:id="@+id/incorrectBeerScanned"
             style="@style/BlackRowCenterSmallText"
             android:layout_weight="1"/>
-       <TextView
-            style="@style/BlackRowCenterSmallText"
-            android:layout_weight="1"/>
-    </LinearLayout>
-  </LinearLayout>
-<!-- END Ratings Section-->  
-
-<!-- START Button Link-->
-  <LinearLayout 
-    android:id="@+id/layoutSpacer"
-    style="@style/FillParentVertical"
-    android:layout_weight="11">
-    <Button
-        android:text="@string/viewProfilePage"
-        android:id="@+id/viewBeerPage"
-        style="@style/BlackRowCenterSmallText"
-        android:layout_weight="1"/>
-      <Button
-        android:text="@string/viewStylePage"
-        android:id="@+id/findOtherSimilarStyles"
-        style="@style/BlackRowCenterSmallText"
-        android:layout_weight="1"/>
-  </LinearLayout>
-<!-- END Button Link-->
-
+	  </LinearLayout>
+	<!-- END Button Link-->
+	
 </LinearLayout>
