--- a/trunk/App/res/layout/scan_results.xml
+++ b/trunk/App/res/layout/scan_results.xml
@@ -48,7 +48,7 @@
 	    android:layout_weight="9">
 	    <LinearLayout
 	        style="@style/FillParentHorizontal"
-	        android:layout_weight="3">
+	        android:layout_weight="2">
 	        <TextView
 	            android:id="@+id/communityRating"
 	            style="@style/BlackRowCenterLargeText"
@@ -76,7 +76,7 @@
 	    
 	    <LinearLayout
 	        style="@style/FillParentHorizontal"
-	        android:layout_weight="4">
+	        android:layout_weight="3">
 	        <TextView
 	            android:id="@+id/communityRatingCount"
 	            style="@style/BlackRowCenterSmallText"
@@ -85,6 +85,17 @@
 	            style="@style/BlackRowCenterSmallText"
 	            android:layout_weight="1"/>
 	    </LinearLayout>
+	    
+	    <LinearLayout
+            style="@style/FillParentHorizontal"
+            android:layout_weight="3">
+            <TextView
+                android:id="@+id/beerAdvocateLink"
+                style="@style/BlackRowCenterSmallText"
+                android:text="@string/beerAdvocateAttribution"
+                android:layout_weight="1"/>
+        </LinearLayout>
+	    
 	  </LinearLayout>
 	<!-- END Ratings Section-->  
 	
