--- a/trunk/App/res/layout/splash.xml
+++ b/trunk/App/res/layout/splash.xml
@@ -2,32 +2,32 @@
 
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     style="@style/FillParentVertical"
-    android:background="#ffffffff">
+    android:background="#ffffffff" android:layout_gravity="center_vertical">
 
     <ImageView
         style="@style/FillParentAll"
-        android:scaleType="center"
-        android:src="@drawable/home" />
-
+        android:src="@drawable/home" android:scaleType="fitStart"/>
+           
     <Button
         android:id="@+id/scanBeer"
-        android:layout_width="157dip"
-        android:layout_height="63dip"
-        android:layout_gravity="left|bottom"
-        android:background="#AA000000"
+        android:text="@string/scanBeer"
         android:clickable="true"
-        android:textSize="30sp"
-        android:textColor="#ffffffff"
-        android:text="@string/scanBeer"/>
-
+        style="@style/HomeButton"
+        />
+        
+    <Button
+        android:id="@+id/searchBeer"
+        android:text="@string/searchBeer"
+        android:clickable="true"
+        android:layout_marginTop="80dip"
+        style="@style/HomeButton"
+        />
+        
     <Button
         android:id="@+id/quitApp"
+        android:text="@string/quitApp" 
         android:clickable="true"
-        android:layout_width="157dip"
-        android:layout_height="63dip"
-        android:layout_gravity="right|bottom"
-        android:background="#AA000000"
-        android:textSize="30sp"
-        android:textColor="#ffffffff"
-        android:text="@string/quitApp" />
+        android:layout_marginTop="160dip"
+        style="@style/HomeButton"
+        />
 </FrameLayout>
