--- a/App/res/values/styles.xml
+++ b/App/res/values/styles.xml
@@ -50,6 +50,7 @@
         <item name="android:paddingRight">40sp</item>
         <item name="android:textSize">20sp</item>
         <item name="android:gravity">fill_horizontal</item>
+        <item name="android:textColor">#ffffff</item>
         <item name="android:background">@drawable/homebutton</item>
     </style>
     
